--- a/css/modal.css
+++ b/css/modal.css
@@ -50,8 +50,8 @@ img {
   display: block;
   color: #000000;
   text-align: center;
-  padding: 12px 12px;
-  margin: 5px;
+  padding: 8px 8px;
+  margin: auto;
   text-decoration: none;
   font-size: 20px;
   font-family: Roboto, sans-serif;
