--- a/css/modal.css
+++ b/css/modal.css
@@ -22,7 +22,7 @@ body {
 }
 
 p {
-  margin-bottom: 0;
+  margin: 10px 0;
 }
 
 img {
@@ -90,7 +90,7 @@ img {
   .topnav.responsive .icon {
     position: absolute;
     right: 0;
-    top: 0;
+    top: 10px;
   }
   .topnav.responsive a {
     float: none;
@@ -202,7 +202,7 @@ label {
   font-size: 17px;
   font-weight: normal;
   display: inline-block;
-  margin-bottom: 11px;
+  margin: 10px 0;
 }
 input {
   padding: 8px;
