--- a/css/modal.css
+++ b/css/modal.css
@@ -174,7 +174,7 @@ main {
 .bground {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   left: 0;
   top: 0;
   height: 100%;
@@ -486,6 +486,46 @@ input[data-error]::after {
 }
 .hero-section > .btn-signup {
   display: none;
+}
+.validatebox {
+  position: fixed;
+  padding: 30px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  background-color: #232323;
+  color: #fff;
+  z-index: 100;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+}
+.validatebox button {
+  margin-top: 10px;
+  font-size: 20px;
+  padding: 5px 20px;
+}
+.errorbox {
+  position: fixed;
+  padding: 30px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  background-color: #ff0000;
+  color: #fff;
+  z-index: 100;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+}
+.errorbox button {
+  margin-top: 10px;
+  font-size: 20px;
+  padding: 5px 20px;
 }
 footer {
   padding-left: 2vw;
