--- a/css/modal.css
+++ b/css/modal.css
@@ -487,6 +487,17 @@ input[data-error]::after {
 .hero-section > .btn-signup {
   display: none;
 }
+.bgroundValidateBox {
+  display: none;
+  position: fixed;
+  z-index: 2;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(26, 39, 156, 0.4);
+}
 .validatebox {
   position: fixed;
   padding: 30px;
@@ -496,7 +507,7 @@ input[data-error]::after {
   background-color: #232323;
   color: #fff;
   z-index: 100;
-  display: none;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -507,6 +518,7 @@ input[data-error]::after {
   font-size: 20px;
   padding: 5px 20px;
 }
+
 .errorbox {
   position: fixed;
   padding: 30px;
@@ -584,4 +596,12 @@ footer {
     opacity: 1;
   }
 }
-
+@keyframes boxSubmitOpen {
+  from {
+    opacity: 0;
+    transform: translateY(-150px);
+  }
+  to {
+    opacity: 1;
+  }
+}
