--- a/css/modal.css
+++ b/css/modal.css
@@ -3,13 +3,14 @@
   --font-slab: var(--font-default);
   --modal-duration: 0.8s;
 }
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
-/* Landing Page */
 
+/* Landing Page */
 body {
   margin: 0;
   display: flex;
@@ -21,37 +22,37 @@ body {
 }
 
 p {
-  margin: 10px 0;
+  margin-bottom: 0;
+  padding: 0.5vw;
 }
 
 img {
-  padding-right: 1rem;
+  padding: 1rem;
 }
 
 .topnav {
+  overflow: hidden;
   margin: 3.5%;
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
 }
+
 .header-logo {
-    margin-top: 10px;
+  float: left;
 }
-@media screen and (max-width: 768px) {
-  .header-logo img{
-    width: 60%;
-}
-}
+
 .main-navbar {
-    display: flex;
-    z-index: 2;
+  float: right;
 }
+
 .topnav a {
+  float: left;
   display: block;
   color: #000000;
   text-align: center;
-  padding: 6px 10px;
-  margin: auto;
+  padding: 0.75rem 0.75rem;
+  margin: 0.3125rem;
   text-decoration: none;
   font-size: 20px;
   font-family: Roboto, sans-serif;
@@ -60,59 +61,22 @@ img {
 .topnav a:hover {
   background-color: #ff0000;
   color: #ffffff;
-  border-radius: 15px;
+  border-radius: 0.9375rem;
 }
 
-.topnav a.active {
+.topnav a.focus {
   background-color: #ff0000;
   color: #ffffff;
-  border-radius: 15px;
+  border-radius: 0.9375rem;
+}
+
+.topnav a:focus span {
+  border-bottom: 0.13rem solid white;
 }
 
 .topnav .icon {
   display: none;
-  font-size: 30px;
   color: #ff0000;
-}
-
-@media screen and (max-width: 768px) {
-  body {
-    max-width: 95%;
-  }
-  .main-navbar {
-    display: block;
-    background-color: white;
-  }
-  .topnav a {
-    display: none;
-    text-align: left;
-  }
-  .topnav a.icon {
-    display: block;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .main-navbar {
-    position: absolute;
-    top: 46px;
-    right: 1px;
-    border-style: solid;
-    border-width: 0.5px;
-    border-color: #ff0000;
-  }
-  .topnav.responsive a {
-    display: block;
-    border-radius: 0px;
-  }
-  .topnav.responsive .icon {
-    position: absolute;
-    top: -46px;
-    right: 1px;
-    border-radius: 15px;
-
-  }
 }
 
 main {
@@ -122,11 +86,10 @@ main {
   padding-top: 0.5vw;
   padding-left: 2vw;
   padding-right: 2vw;
-  margin: 1px 0px 15px;
+  margin: 1px 20px 15px;
   border-radius: 2rem;
   text-align: justify;
-
-
+  align-items: center;
 }
 
 .modal-btn {
@@ -152,18 +115,17 @@ main {
 }
 
 /* Modal form */
-
-.button {
+.btn-submit {
   background: #fe142f;
   margin-top: 0.5em;
   padding: 1em;
   color: #fff;
-  border-radius: 15px;
+  border-radius: 0.9375rem;
   cursor: pointer;
   font-size: 16px;
 }
 
-.button:hover {
+.btn-submit:hover {
   background: #3876ac;
 }
 
@@ -174,7 +136,7 @@ main {
 .bground {
   display: none;
   position: fixed;
-  z-index: 2;
+  z-index: 1;
   left: 0;
   top: 0;
   height: 100%;
@@ -207,13 +169,15 @@ label {
   font-size: 17px;
   font-weight: normal;
   display: inline-block;
-  margin: 10px 0;
+  margin-bottom: 11px;
 }
+
 input {
   padding: 8px;
   border: 0.8px solid #ccc;
   outline: none;
 }
+
 .text-control {
   margin: 0;
   padding: 8px;
@@ -222,30 +186,30 @@ input {
   font-size: 20px;
   height: 48px;
 }
+
 .formData[data-error]::after {
   content: attr(data-error);
-  font-size: 0.4em;
-  color: #e54858;
+  font-size: 0.5em;
+  color: #ff4e60;
   display: block;
   margin-top: 7px;
   margin-bottom: 7px;
-  text-align: right;
+  text-align: left;
   line-height: 0.3;
   opacity: 0;
   transition: 0.3s;
 }
+
 .formData[data-error-visible="true"]::after {
   opacity: 1;
 }
-.formData[data-error-visible="true"] .text-control {
-  border: 2px solid #e54858;
-}
-/* 
+
 input[data-error]::after {
-    content: attr(data-error);
-    font-size: 0.4em;
-    color: red;
-} */
+  content: attr(data-error);
+  font-size: 0.6em;
+  color: red;
+}
+
 .checkbox-label,
 .checkbox2-label {
   position: relative;
@@ -253,6 +217,7 @@ input[data-error]::after {
   font-size: 12px;
   font-weight: normal;
 }
+
 .checkbox-label .checkbox-icon,
 .checkbox2-label .checkbox-icon {
   display: block;
@@ -267,6 +232,7 @@ input[data-error]::after {
   top: -1px;
   transition: 0.3s;
 }
+
 .checkbox-label .checkbox-icon::after,
 .checkbox2-label .checkbox-icon::after {
   content: "";
@@ -283,21 +249,26 @@ input[data-error]::after {
   transition: 0.3s;
   opacity: 0;
 }
+
 .checkbox-input {
   display: none;
 }
+
 .checkbox-input:checked + .checkbox-label .checkbox-icon::after,
 .checkbox-input:checked + .checkbox2-label .checkbox-icon::after {
   opacity: 1;
 }
+
 .checkbox-input:checked + .checkbox2-label .checkbox-icon {
   background: #279e7a;
 }
+
 .checkbox2-label .checkbox-icon {
   border-radius: 4px;
   border: 0;
   background: #c4c4c4;
 }
+
 .checkbox2-label .checkbox-icon::after {
   width: 7px;
   height: 4px;
@@ -310,6 +281,7 @@ input[data-error]::after {
   left: 21%;
   top: 19%;
 }
+
 .close {
   position: absolute;
   right: 15px;
@@ -320,6 +292,7 @@ input[data-error]::after {
   cursor: pointer;
   transform: scale(0.7);
 }
+
 .close:before,
 .close:after {
   position: absolute;
@@ -329,12 +302,15 @@ input[data-error]::after {
   width: 3px;
   background-color: #fff;
 }
+
 .close:before {
   transform: rotate(45deg);
 }
+
 .close:after {
   transform: rotate(-45deg);
 }
+
 .btn-submit,
 .btn-signup {
   background: #fe142f;
@@ -347,6 +323,7 @@ input[data-error]::after {
   cursor: pointer;
   border: 0;
 }
+
 /* custom select styles */
 .custom-select {
   position: relative;
@@ -358,6 +335,7 @@ input[data-error]::after {
 .custom-select select {
   display: none;
 }
+
 .select-selected {
   background-color: #fff;
 }
@@ -413,20 +391,21 @@ input[data-error]::after {
 .same-as-selected {
   background-color: rgba(0, 0, 0, 0.1);
 }
+
 /* custom select end */
 .text-label {
   font-weight: normal;
   font-size: 16px;
 }
+
 .hero-section {
-  min-height: 360px; /*93vh*/
   border-radius: 10px;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   overflow: hidden;
   box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
-  margin-bottom: 10px;
 }
+
 .hero-content {
   padding: 51px 67px;
   grid-column: span 4;
@@ -436,6 +415,7 @@ input[data-error]::after {
   text-align: left;
   min-width: 424px;
 }
+
 .hero-content::after {
   content: "";
   width: 100%;
@@ -445,146 +425,65 @@ input[data-error]::after {
   right: -80px;
   top: 0;
 }
+
 .hero-content > * {
   position: relative;
   z-index: 1;
 }
+
 .hero-headline {
-  font-size: 6rem;
+  font-size: 4em;
   font-weight: normal;
+  width: 100%;
   white-space: nowrap;
 }
 
 .hero-text {
   width: 146%;
   font-weight: normal;
-  margin-top: 80px;
+  margin-top: 57px;
   padding: 0;
+  font-size: 2vw;
 }
+
 .btn-signup {
   outline: none;
-  text-transform: capitalize;
+  text-transform: none;
   font-size: 1.3rem;
   padding: 15px 23px;
   margin: 0;
-  margin-top: 80px;
+  margin-top: 59px;
+  width: 12.5rem;
 }
+
 .hero-img {
   grid-column: span 8;
 }
+
 .hero-img img {
   width: 100%;
+  height: 100%;
   display: block;
   padding: 0;
 }
+
 .copyrights {
   color: #fe142f;
   padding: 0;
-  font-size: 1rem;
+  font-size: 0.8rem;
   margin: 60px 0 30px;
   font-weight: bolder;
 }
+
 .hero-section > .btn-signup {
   display: none;
 }
-.bgroundValidateBox {
-  display: none;
-  position: fixed;
-  z-index: 2;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  overflow: auto;
-  background-color: rgba(26, 39, 156, 0.4);
-}
-.validatebox {
-  position: fixed;
-  padding: 30px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  background-color: #232323;
-  color: #fff;
-  z-index: 100;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border-radius: 15px;
-}
-.validatebox button {
-  margin-top: 10px;
-  font-size: 20px;
-  padding: 5px 20px;
-}
 
-.errorbox {
-  position: fixed;
-  padding: 30px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  background-color: #ff0000;
-  color: #fff;
-  z-index: 100;
-  display: none;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border-radius: 15px;
-}
-.errorbox button {
-  margin-top: 10px;
-  font-size: 20px;
-  padding: 5px 20px;
-}
 footer {
+  font-family: var(--font-slab);
   padding-left: 2vw;
   padding-right: 2vw;
   margin: 0 20px;
-}
-@media screen and (max-width: 800px) {
-  body {
-    max-width: 95%;
-  }
-  .hero-section {
-    display: block;
-    box-shadow: unset;
-  }
-  .hero-content {
-    background: #fff;
-    color: #000;
-    padding: 0px;
-  }
-  .hero-content::after {
-    content: unset;
-  }
-  .hero-content .btn-signup {
-    display: none;
-  }
-  .hero-headline {
-    font-size: 40px;
-    white-space: normal;
-  }
-  .hero-text {
-    margin-top: 30px;
-    width: 80%;
-    font-size: 15px;
-  }
-  .hero-img img {
-    border-radius: 10px;
-    margin-top: 40px;
-  }
-  .hero-section > .btn-signup {
-    display: block;
-    margin: 32px auto 10px;
-    padding: 12px 35px;
-  }
-  .copyrights {
-    margin-top: 50px;
-    text-align: center;
-  }
 }
 
 @keyframes modalopen {
@@ -592,16 +491,144 @@ footer {
     opacity: 0;
     transform: translateY(-150px);
   }
+
   to {
     opacity: 1;
   }
 }
-@keyframes boxSubmitOpen {
-  from {
-    opacity: 0;
-    transform: translateY(-150px);
+
+/* CONFIRMATION SUBMIT MODAL */
+.container-confirmation-submit {
+  display: none;
+  background-color: rgba(26, 39, 156, 0.4);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 3;
+}
+
+.submitted-form {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 500px;
+  height: 200px;
+  background-color: #232323;
+}
+.submitted-form p {
+  color: #fff;
+  text-align: center;
+}
+#close-btn-confirmation {
+  width: 150px;
+  font-size: 22px;
+  background: #fe142f;
+  color: #fff;
+  padding: 0.75rem 2.5rem;
+  border-radius: 1rem;
+  cursor: pointer;
+}
+#close-btn-confirmation:hover {
+  background: #3876ac;
+}
+
+.close-modal-submit {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  cursor: pointer;
+  color: #ffffff;
+}
+
+@media screen and (max-width: 768px) {
+  .topnav {
+    flex-wrap: wrap;
   }
-  to {
-    opacity: 1;
+
+  .topnav a {
+    display: none;
+  }
+
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+
+  .topnav.responsive {
+    position: relative;
+  }
+
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .header-logo img {
+    width: 150px;
+  }
+
+  .hero-section {
+    display: block;
+    box-shadow: unset;
+  }
+
+  .hero-content {
+    background: #fff;
+    color: #000;
+    padding: 0;
+    min-width: auto;
+  }
+
+  .hero-content::after {
+    content: unset;
+  }
+
+  .hero-content .btn-signup {
+    display: none;
+  }
+
+  .hero-headline {
+    width: 100%;
+    flex-wrap: wrap;
+    font-size: 2.5rem;
+    white-space: normal;
+  }
+
+  .hero-text {
+    width: unset;
+    font-size: 1rem;
+    margin-top: 1.5rem;
+  }
+
+  .hero-img img {
+    border-radius: 10px;
+    margin-top: 40px;
+  }
+
+  .hero-section > .btn-signup {
+    display: block;
+    margin: 32px auto 10px;
+    padding: 12px 35px;
+  }
+
+  .copyrights {
+    margin-top: 50px;
+    text-align: center;
   }
 }
